# LanSend

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  test_connection_request.py  test_discovery_device.py  test_transfer.py  vcpkg.json
.github/workflows/: build.yml  cmake-single-platform.yml  codeql.yml  format-check.yml
gui/: package-lock.json  package.json
gui/src/: app.js  index.html  main.js  preload.js
gui/src/assets/: styles.css
gui/src/components/: DeviceList.js  FileUploader.js  TransferItem.js
gui/src/utils/: pipe_client.js
gui/src/views/: HistoryView.js  HomeView.js  SettingsView.js
src/: main.cpp
src/api/: http_server.cpp  http_server.hpp  rest_api_handler.cpp  rest_api_handler.hpp
src/cli/: argument_parser.cc  argument_parser.cpp  argument_parser.hpp  cli_manager.cc  cli_manager.cpp  cli_manager.hpp  main.cc  progress_display.cc  progress_display.cpp  progress_display.hpp  terminal.cc  terminal.cpp  terminal.hpp
src/constants/: path.hpp  route.hpp  transfer.h
src/controller/: common_api_controller.cc  common_api_controller.h  receive_controller.cc  receive_controller.h  rest_api_controller.cc  rest_api_controller.h
src/core/: network_manager.cpp  network_manager.hpp
src/core/network/: network_manager.cc
src/core/network/client/: http_client.cc  http_client_service.cc  send_session.cc  send_session_manager.cc
src/core/network/discovery/: discovery_manager.cc
src/core/network/server/: http_server.cc
src/core/network/server/controller/: common_controller.cc  receive_controller.cc
src/core/security/: certificate_manager.cc  file_encryptor.cc  file_hasher.cc  open_ssl_provider.cc
src/core/util/: config.cc  system.cc
src/discovery/: discovery_manager.cpp  discovery_manager.hpp  test.cpp
src/include/cli/: argument_parser.h  cli_manager.h  progress_display.h  terminal.h
src/include/cli/model/: transfer_progress.h
src/include/core/: model.h
src/include/core/constant/: path.h  route.h  transfer.h
src/include/core/model/: device_info.h  dto.h  feedback.h  file_receive_context.h  file_type.h  security_context.h  session_status.h  transfer_file_info.h
src/include/core/model/dto/: broadcast_dto.h  file_dto.h  request_send_dto.h  request_send_response_dto.h  send_chunk_dto.h  verify_integrity_dto.h
src/include/core/model/feedback/: device_connect_result.h  feedback.h  feedback_type.h  file_receiving_completed.h  file_receiving_progress.h  file_sending_completed.h  file_sending_progress.h  found_device.h  lost_device.h  receive_session_end.h  recipient_accepted.h  recipient_declined.h  request_receive_files.h  send_session_end.h  settings.h
src/include/core/network/: network_manager.h
src/include/core/network/client/: http_client.h  http_client_service.h  send_session.h  send_session_manager.h
src/include/core/network/discovery/: discovery_manager.h
src/include/core/network/server/: http_server.h
src/include/core/network/server/controller/: common_controller.h  receive_controller.h
src/include/core/security/: certificate_manager.h  file_encryptor.h  file_hasher.h  open_ssl_provider.h
src/include/core/util/: binary_message.h  config.h  logger.h  system.h
src/include/ipc/: ipc_backend_service.h  ipc_event_stream.h  ipc_service.h  model.h
src/include/ipc/model/: cancel_send.h  cancel_wait_for_confirmation.h  confirm_receive.h  confirm_receive_operation.h  connect_to_device.h  modify_settings.h  operation.h  operation_type.h  send_files.h
src/ipc/: ipc_backend_service.cc  ipc_event_stream.cc  ipc_event_stream.h  ipc_service.cc  main.cc
src/models/: SecurityContext.hpp  binary_message_header.h  device_info.h  device_info.hpp  file_chunk_info.h  ipc.h  message_type.h  std_optional.h  transfer_metadata.hpp  transfer_request.hpp  transfer_response.hpp
src/models/dto/: file_dto.h  request_send_dto.h  verify_integrity_dto.h
src/models/ipc/: confirm_receive_operation.h  notification.h  notification_type.h  operation.h  operation_type.h
src/network/: http_client.cc  http_client.h  http_server.cpp  http_server.hpp  network_manager.cpp  network_manager.hpp
src/security/: certificate_manager.cc  certificate_manager.cpp  certificate_manager.h  certificate_manager.hpp  ssl_context.cpp  ssl_context.hpp  ssl_helper.cpp  ssl_helper.hpp  trusted_host_manager.cc  trusted_host_manager.h
src/transfer/: file_hasher.cpp  file_hasher.hpp  file_sender.cc  file_sender.h  send_session.cc  send_session.h  send_session_manager.cc  send_session_manager.h  transfer_manager.cpp  transfer_manager.hpp  transfer_metadata.cpp  transfer_metadata.hpp
src/util/: config.cpp  config.hpp  logger.cpp  logger.hpp
src/utils/: binary_message.h  binary_message_helper.h  config.cpp  config.hpp  device.cpp  device.hpp  system.cc
